@@ -20,7 +20,7 @@
 
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.5.6"
+       version="2.5.7"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
@@ -39,6 +39,7 @@
     <supportedcontent>
       <content>movies</content>
       <content>tvshows</content>
+      <content>episodes</content>
     </supportedcontent>
   </extension>
 </addon>
